# peat-gateway

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  SKILL.md  zarf.yaml
.cargo/: audit.toml
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  qa-review.yml  sbom.yml
bundle/: uds-bundle.yaml
chart/peat-gateway/: Chart.yaml  values.yaml
chart/peat-gateway/templates/: _helpers.tpl  deployment.yaml  pvc.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml  uds-package.yaml
docs/: architecture.md  cdc.md  control-plane-ingress.md  deployment.md  envelope-encryption.md  horizontal-scaling.md  identity-federation.md  multi-tenancy.md  performance.md
src/: cli.rs  config.rs  lib.rs  loadtest.rs  main.rs
src/api/: auth.rs  cdc_test.rs  enroll.rs  formations.rs  health.rs  identity.rs  mod.rs  orgs.rs  sinks.rs  tokens.rs
src/cdc/: engine.rs  mod.rs  nats_sink.rs  watcher.rs  webhook_sink.rs
src/crypto/: kms.rs  local.rs  mod.rs  vault.rs
src/ingress/: events.rs  handlers.rs  mod.rs
src/storage/: mod.rs  postgres.rs  redb_backend.rs
src/tenant/: manager.rs  mod.rs  models.rs  observer.rs
tests/: admin_auth_tests.rs  api_tests.rs  cdc_watcher_tests.rs  error_recovery_tests.rs  formations_tests.rs  hardening_tests.rs  identity_tests.rs  isolation_tests.rs  kms_tests.rs  loadtest_tests.rs  migrate_keys_tests.rs  nats_broker_acl_tests.rs  nats_ingress_tests.rs  nats_jetstream_tests.rs  nats_sink_tests.rs  oidc_mock_tests.rs  p1_completeness_tests.rs  p2_robustness_tests.rs  postgres_tests.rs  vault_tests.rs  webhook_sink_tests.rs
tests/common/: gateway_config.rs  mod.rs  nats.rs
tests/fixtures/: nats-multi-account.conf
ui/: package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
ui/src/: app.html
ui/src/lib/api/: client.ts  types.ts
ui/src/lib/components/: Badge.svelte  Card.svelte  DataTable.svelte  EmptyState.svelte  StatusDot.svelte
ui/src/lib/features/layout/: Root.svelte
ui/src/routes/: +layout.svelte  +page.ts
ui/src/routes/orgs/: +page.svelte
ui/src/styles/: app.css
(+8 files in other folders)
